kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-web-app
  labels:
    app: java-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-web-app
  type: ClusterIP
