kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: java-web-app.local
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-web-app
            port:
              number: 80
